# CanIUseParquet

./: .gitignore  README.md  parquet_can_i_use.md  pyproject.toml
.github/workflows/: parquet-can-i-use.yml  test.yml
parquet_can_i_use/: .gitignore  apache_reference.json  compare_with_apache.py  fetch_release_dates.py  generate_fixtures.py  generate_matrix.py  release_dates.json  run_multiversion.py  version_history.json  versions.json
parquet_can_i_use/cli/python/: test_duckdb.py  test_fastparquet.py  test_polars.py  test_pyarrow.py  test_spark.py
parquet_can_i_use/fixtures/advanced_features/: adv_DATA_PAGE_V2.parquet  adv_PAGE_CRC32.parquet  adv_PAGE_INDEX.parquet  adv_SIZE_STATISTICS.parquet
parquet_can_i_use/fixtures/compression/: comp_BROTLI.parquet  comp_GZIP.parquet  comp_LZ4.parquet  comp_LZ4_RAW.parquet  comp_LZO.parquet  (+2 more)
parquet_can_i_use/results/: all_versions.json  arrow-go.json  duckdb.json  fastparquet.json  hyparquet-cli_harness_broken.json  hyparquet.json  parquet-dotnet.json  parquet-go.json  parquet-java.json  parquet-rs.json  parquet-sharp-12.0.1.json  parquet-sharp-13.0.0.json  parquet-sharp-14.0.2.json  parquet-sharp-15.0.2.1.json  parquet-sharp-16.1.0.json  parquet-sharp-18.1.0.json  parquet-sharp-19.0.1.json  parquet-sharp-20.0.0.json  parquet-sharp-21.0.0.json  parquet-sharp.json  polars.json  pyarrow.json
parquet_can_i_use/site/: package-lock.json  package.json  tsconfig.tsbuildinfo
profiler/: __init__.py  cpython_stacktrace.py  lldb_profiler.py  parquet_writer.py
tests/: test_integration.py  test_profiler.py
viewer/: index.html
(+65 files in other folders)
