[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-lldb-profiler"
version = "0.1.0"
description = "Memory profiler for CPython using an LLDB plugin"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]
